# ickyMCP

./: .gitignore  CLAUDE.md  README.md  claude_config_example.json  comprehensive_test.py  fast_index.py  pyproject.toml  requirements.txt  run.py  test_chunk.py  test_mcp_additional.py  test_mcp_comprehensive.py  test_multitenant.py  test_recursive_index.py
src/: __init__.py  chunker.py  config.py  database.py  embedder.py  parsers.py  server.py
